# organize.party

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  cabal.project.freeze  docker-compose.yml  events.cabal  flake.nix  migrate-database.sh  postgres.Dockerfile  reset-database.sh  run-local.sh  sqitch.conf  stack.yaml  update-server-container.sh
db/: postgres.Dockerfile  sqitch.plan  tables.sql
db/deploy/: add_event_passwords.sql  restructure_event_table.sql
db/deploy/functions/: add_attendee_data.sql  add_attendee_data@unsubscribe-feature.sql
db/deploy/tables/: attendee_data.sql  attendees.sql  commenters.sql  commenters@forgetme-feature.sql  comments.sql  comments@email-notifications.sql  comments@forgetme-feature.sql  event_data.sql  events.sql  forgetme_requests.sql
db/revert/: add_event_passwords.sql  restructure_event_table.sql
db/revert/functions/: add_attendee_data@unsubscribe-feature.sql
db/revert/tables/: attendee_data.sql  attendees.sql  attendees@email-notifications.sql  attendees@forgetme-feature.sql  attendees@rework-events.sql  attendees@unsubscribe-feature.sql  commenters.sql  commenters@forgetme-feature.sql  comments.sql  comments@email-notifications.sql  event_data.sql  events.sql  events@rework-events.sql  forgetme_requests.sql
db/verify/: add_event_passwords.sql  restructure_event_table.sql
db/verify/functions/: add_attendee_data.sql
db/verify/tables/: attendee_data.sql  attendees@forgetme-feature.sql  commenters@forgetme-feature.sql  comments.sql  event_data.sql  events.sql  forgetme_requests.sql
deploy/tables/: attendees.sql  events.sql
frontend/: elm.json  index.html  package-lock.json  package.json
frontend/src/: Main.elm  NewEvent.elm  Types.elm  Util.elm  ViewEvent.elm
frontend/src/Page/: About.elm  EditEvent.elm  ForgetMeRequest.elm  NewEvent.elm  NewForgetMeRequest.elm  Unsubscribe.elm  ViewEvent.elm
frontend/src/Shared/: EventEditor.elm  ExpandingTextarea.elm  FormatUrls.elm  Navbar.elm  PageState.elm  SectionSeparator.elm  ViewAttendees.elm  ViewComments.elm  Void.elm
frontend/static/: about.css  datepicker.css  elm-time-picker.css  expanding-textarea.css  navbar.css  style.css
frontend/test/: README  package-lock.json  package.json  test.spec.ts
nginx/: nginx-certbot.conf  nginx.conf
scripts/: backup-database.sh  build-frontend.sh  push-docker-image.sh  restore-backup.sh  run-certbot.sh  schedule-backup.sh
src/: Email.hs  Html.hs  Main.hs
src/Endpoints/: AddVisit.hs  Attend.hs  Comment.hs  CreateEvent.hs  EditEvent.hs  ExecuteForgetMeRequest.hs  GetEvent.hs  InitForgetMeRequest.hs  Unsubscribe.hs  ViewForgetMeRequest.hs
src/Functions/: GetEvent.hs  QueryAttendees.hs
src/Types/: AppEnv.hs  AttendInput.hs  Attendee.hs  AttendeePut.hs  CommentInput.hs  CreateEventInput.hs  Event.hs  ForgetMeRequest.hs  Unsubscribe.hs  Visit.hs  VisitPut.hs  Visitor.hs
