name:                events
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/events#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable events
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types.Event
                     , Types.CreateEventInput
                     , Types.Attendee
                     , Types.AttendInput
                     , Types.AppEnv
                     , Endpoints.CreateEvent
                     , Endpoints.GetEvent
                     , Endpoints.EditEvent
                     , Endpoints.Attend
                     , Email
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , hasql
                     , hasql-pool
                     , hasql-th
                     , hasql-transaction
                     , servant
                     , servant-server
                     , aeson
                     , time
                     , wai
                     , wai-cors
                     , warp
                     , text
                     , profunctors
                     , uuid
                     , string-interpolate
                     , bytestring
                     , http-media
                     , type-iso
                     , mtl
                     , utf8-string
                     , smtp-mail
                     , mime-mail
                     , network
                     , transformers
  default-extensions:  OverloadedStrings
                     , QuasiQuotes
                     , NamedFieldPuns
                     , DeriveGeneric
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
