name:                events
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/organize.party#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable events
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Email
                     , Endpoints.Attend
                     , Endpoints.Comment
                     , Endpoints.CreateEvent
                     , Endpoints.EditEvent
                     , Endpoints.GetEvent
                     , Types.AppEnv
                     , Types.Attendee
                     , Types.AttendInput
                     , Types.CommentInput
                     , Types.CreateEventInput
                     , Types.Event
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.0
                     , hasql >=1.6.0.1 && <1.7
                     , hasql-pool >= 0.10 && <= 0.11
                     , hasql-th >= 0.4 && < 0.5
                     , hasql-transaction >= 1.0 && < 2.0
                     , servant >= 0.20 && < 0.21
                     , servant-server >= 0.20 && < 0.21
                     , aeson >= 2.1 && < 3.0
                     , time >= 1.12 && < 2.0
                     , wai >= 3.2 && <= 3.3
                     , wai-cors >= 0.2 && <= 0.3
                     , warp >= 3.3 && < 3.4
                     , text >= 2.0 && < 3.0
                     , profunctors >= 5.6 && < 6.0
                     , uuid >= 1.3 && <= 2.0
                     , string-interpolate >= 0.3 && < 0.4
                     , bytestring >= 0.11
                     , http-media >= 0.8 && < 0.9
                     , type-iso >= 1.0 && < 1.1
                     , mtl >= 2.3 && <= 3.0
                     , utf8-string >= 1.0 && < 1.1
                     , smtp-mail >= 0.3 && <= 0.4
                     , mime-mail >= 0.5 && <= 0.6
                     , network >= 3.1
                     , transformers >= 0.6
                     , vector >= 0.13
  default-extensions:  OverloadedStrings
                     , QuasiQuotes
                     , NamedFieldPuns
                     , DeriveGeneric
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , RecordWildCards
                     , OverloadedRecordDot
