name:                events
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/organize.party#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable events
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Email
                     , Endpoints.Attend
                     , Endpoints.Comment
                     , Endpoints.CreateEvent
                     , Endpoints.EditEvent
                     , Endpoints.GetEvent
                     , Endpoints.InitForgetMeRequest
                     , Endpoints.ViewForgetMeRequest
                     , Endpoints.ExecuteForgetMeRequest
                     , Endpoints.Unsubscribe
                     , Html
                     , Types.AppEnv
                     , Types.Attendee
                     , Types.AttendInput
                     , Types.CommentInput
                     , Types.CreateEventInput
                     , Types.Event
                     , Types.ForgetMeRequest
                     , Types.Unsubscribe
  default-language:    GHC2021
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       aeson >= 2.1 && < 3.0
                     , base >= 4.0
                     , bytestring >= 0.11
                     , hasql >=1.9.0.1
                     , hasql-pool >= 0.10
                     , hasql-th >= 0.4
                     , hasql-transaction >= 1.0
                     , http-media >= 0.8 && < 0.9
                     , mime-mail >= 0.5 && <= 0.6
                     , mtl >= 2.3 && <= 3.0
                     , network >= 3.1
                     , profunctors >= 5.6 && < 6.0
                     , servant >= 0.20 && < 0.21
                     , servant-server >= 0.20 && < 0.21
                     , smtp-mail >= 0.3 && <= 0.4
                     , stringsearch >= 0.3.6.6
                     , string-interpolate >= 0.3 && < 0.4
                     , text >= 2.0 && < 3.0
                     , time >= 1.12 && < 2.0
                     , transformers >= 0.6
                     , type-iso >= 1.0 && < 1.1
                     , uuid >= 1.3 && <= 2.0
                     , utf8-string >= 1.0 && < 1.1
                     , vector >= 0.13
                     , wai >= 3.2 && <= 3.3
                     , wai-cors >= 0.2 && <= 0.3
                     , warp >= 3.3 && < 3.4
  default-extensions:  BlockArguments
                     , DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedRecordDot
                     , OverloadedStrings
                     , RecordWildCards
                     , QuasiQuotes
                     , TypeOperators
